<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="Inputs" Id="{917e8483-07b4-456d-a17e-f1ca7492de73}">
    <Declaration><![CDATA[TYPE Inputs :
STRUCT
	bEntrySensor : BOOL;
	bExitSensor : BOOL;
	bSCMovingX : BOOL;
	bSCMovingZ : BOOL;
	bSCLeftLimit : BOOL;
	bSCRightLimit : BOOL;
	bSCMiddlLimit : BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>